--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>蛋白质可视化工具 - 1E6B</h1>
+        <h1>蛋白质可视化工具</h1>
 
         
         <div id="viewer3d">
