--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
     <div class="watermark-content">
         <div class="logo-container">
             <div class="logo">
-                 <img src="images/logo.svg" alt="BioStruct Logo">
+                 <img src="images/logo.png" alt="BioStruct Logo">
             </div>
         </div>
         <div class="text-container">
