--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
         
         <div class="controls">
             <div class="control-group">
-                <h3><span class="info-icon">i</span> 模型选择</h3>
+                <h3><span class="info-icon">i</span> 案例选择</h3>
                 <select id="modelSelector" onchange="loadSelectedModel()" title="选择要查看的蛋白质模型">
                     <option value="1e6b">1E6B - Zeta class glutathione S-transferase</option>
                     <option value="4ins">4INS - Phosphate-free ribonuclease A</option>
